z-index fixed

--- a/frontend/src/app/chat/chat-room-page/message-list/message-list.component.scss
+++ b/frontend/src/app/chat/chat-room-page/message-list/message-list.component.scss
@@ -365,5 +365,5 @@ div.reply.first:not(.own) {
   position: absolute;
   top: 100px;
   left: 50%;
-  z-index: 1;
+  z-index: 2;
 }
